Add Swagger docs to every endpoint
